--- a/Cedric_ShoT/data/shot/functions/TODO.txt
+++ b/Cedric_ShoT/data/shot/functions/TODO.txt
@@ -2,11 +2,10 @@
 Code dev:
 ---------
 
-random respawn location (spreadplayers)
-random gifts for low score players
+random chest contents
+random gifts for low score players?
 tp back if stuck in adventure mode
-reward for killing players
-penalty for dying
+winner celebration?
 
 
 Structures:
@@ -15,13 +14,4 @@ Structures:
 entonnoir void autour structures
 check to avoid entrance in a cliff
 better integration in cliff side?
-
-
-Gameplay:
----------
-
-random chest contents?
-random villager trades? (renew villager as players arrives)
-winner celebration?
-
 
